apps/docs/src/app/v2/components/misc/RHFPhoneInput/page.mdx
import { DocsPage, PropsTable } from '@/components/docs';
import {
  componentMetadata,
  componentPropsV1,
  stackblitzFileLink
} from '@/constants';

export const metadata = componentMetadata.MUIPhoneInput;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# MUIPhoneInput

`MUIPhoneInput` wraps [react-international-phone](https://react-international-phone.vercel.app/)
inside a [TextField](https://v7.mui.com/material-ui/react-text-field/), with a searchable country
dropdown. It emits a structured `MUIPhoneInputValue` (`phone`, `country`, `dialCode`, `phoneNo`).

## Installation

Make sure to install [react-international-phone](https://www.npmjs.com/package/react-international-phone) package
before using this component.

<PackageManagerTabs
  id="install-react-international-phone"
  command="react-international-phone"
/>

## Usage

```ts
import MUIPhoneInput, {
  type MUIPhoneInputProps,
  type MUIPhoneInputValue
} from '@nish1896/mui-components/misc/phone-input';

```

```tsx
const [phone, setPhone] = useState<MUIPhoneInputValue>();

<MUIPhoneInput
  fieldName="phone"
  value={phone}
  onValueChange={({ newValue }) => setPhone(newValue)}
/>
```

<Callout type="tip">
  For validation, consider enforcing the following minimum lengths:

  - `phone` and `phoneNo`: at least **6** characters
  - `country`: exactly **2** characters (ISO country code)
  - `dialCode`: **1–4** digits, depending on the selected country
</Callout>

### Return Value

The input and return value is represented as an `MUIPhoneInputValue` object:

```ts
type MUIPhoneInputValue = {
  phone: string;
  country: CountryIso2;  // imported from 'react-international-phone'
  dialCode: string;
  phoneNo: string;
}
```

After input, the returned phone value has this shape:
```js
{
  phone: "+918885511000"
  country: "in"
  dialCode: "91"
  phoneNo: "8885511000"
}
```

Where:

| Property | Description |
|-|-|
| `phone` | Full phone number including country dial code |
| `country` | Selected ISO 3166-1 alpha-2 country code |
| `dialCode` | Country dialing code without the `+` prefix |
| `phoneNo` | National phone number without the dial code |

**Why is the country stored separately?**

Some countries share the same dialing code. For example:

- 🇺🇸 United States: `+1 (765) 232-3423`
- 🇨🇦 Canada: `+1 (416) 345-6234`
- 🇵🇷 Puerto Rico: `+1 (787) 234-4442`

Although all three numbers begin with `+1`, they belong to different countries.
Storing the selected country separately removes that ambiguity
and makes it easier to perform country-specific validation and processing.

For example:

```ts
const { phone, country, phoneNo } = value;
```

Use:

- `phone` when you need the complete international number.
- `phoneNo` when you only need the national number.
- `country` for country-specific logic or validation.

**This is the main reason the field value shape changed from a `string` to an `object`
in `v4`.**

### Search Countries

Because the country list is large, `MUIPhoneInput` has an inline search field
that allows users to search for and select their preferred country. The search
matches the country name, ISO2 country code, and dial code.

The search field is enabled by default and can be customized using `searchCountryProps`, an object
with the following properties:

- `allowCountrySearch` - Shows or hides the inline search field. Defaults to `true`.
- `textFieldProps` - [TextFieldProps](https://v7.mui.com/material-ui/api/text-field/) for customizing the search text field.
- `renderCountryMenuItem` - Customizes the content of each `MenuItem` in the country search dropdown.
- `noCountryFoundText` - Text shown when no countries match the search. Defaults to "**No countries found**".

```jsx
<MUIPhoneInput
  fieldName="phoneNumber"
  value={phoneNumber}
  onValueChange={({ newValue }) => setPhoneNumber(newValue)}
  searchCountryProps={{
    textFieldProps: {
      variant: 'outlined'
    }
    renderCountryMenuItem: country => `${country.dialCode} - ${country.name}`,
    noCountryFoundText: 'No matching country found'
  }}
/>
```

The search field is rendered inside the country dropdown and remains pinned to
the top while the country list is scrolled.

## Props

`MUIPhoneInputProps` also accepts most [TextFieldProps](https://v7.mui.com/material-ui/api/text-field/) except `value`, `onChange` and `type`. Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable rows={componentPropsV1.MUIPhoneInput} />

## Reference
- [PhoneInput](https://react-international-phone-storybook.vercel.app/?path=/story/phoneinput--default)
