apps/docs/src/app/v4/components/misc/RHFPhoneInput/page.mdx
import { DocsPage, PropsTable, AvailabilityBanner, Callout } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFPhoneInput;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFPhoneInput

<AvailabilityBanner componentName="RHFPhoneInput" version="2.0" />

The **RHFPhoneInput** component is built on top of [react-international-phone](https://www.npmjs.com/package/react-international-phone),
a React library for handling international phone numbers.

It integrates seamlessly with Material UI by leveraging the [TextField](https://v7.mui.com/material-ui/react-text-field/)
component together with the [usePhoneInput](https://react-international-phone.vercel.app/docs/Advanced%20Usage/usePhoneInput)
hook from `react-international-phone`, allowing users to select a country and enter phone numbers
in the appropriate international format.

## Installation

<PackageManagerTabs
  id="install-react-international-phone"
  command="react-international-phone"
/>

<Callout type="warning" title="Field value shape changed">
From **v4** onward, `RHFPhoneInput` stores an object in React Hook Form state
instead of a plain phone number string.

If you are upgrading from an earlier version, update your form schemas,
default values, validation logic, and submission handlers to work with
the new `RHFPhoneInputValue` type.

For backward compatibility, initial and default values may still be provided as strings,
but any value produced after user interaction will be returned as an `RHFPhoneInputValue` object.
</Callout>

## Usage

```ts
import RHFPhoneInput, {
  type RHFPhoneInputProps,
  type RHFPhoneInputValue
} from '@nish1896/rhf-mui-components/misc/phone-input';
```

```tsx
<RHFPhoneInput
  fieldName="contactNumber"
  control={control}
  phoneInputProps={{
    defaultCountry: "in",
    preferredCountries: ["in", "us", "au"]
  }}
/>
```

<Callout type="info">
For validation, consider enforcing the following minimum lengths:

- `phone` and `phoneNo`: at least **6** characters
- `country`: exactly **2** characters (ISO country code)
- `dialCode`: typically **1–4** digits, depending on the selected country
</Callout>

### Return Value

Starting in **v4**, the field value is represented as an `RHFPhoneInputValue` object:

```ts
type RHFPhoneInputValue = {
  phone: string;
  country: CountryIso2;  // imported from 'react-international-phone'
  dialCode: string;
  phoneNo: string;
}
```

After input, the returned phone value has this shape:
```js
{
  phone: "+918885511000"
  country: "in"
  dialCode: "91"
  phoneNo: "8885511000"
}
```

Where:

| Property | Description |
|-|-|
| `phone` | Full phone number including country dial code |
| `country` | Selected ISO 3166-1 alpha-2 country code |
| `dialCode` | Country dialing code without the `+` prefix |
| `phoneNo` | National phone number without the dial code |

**Why is the country stored separately?**

Some countries share the same dialing code. For example:

- United States: `+1 (765) 232-3423`
- Canada: `+1 (416) 345-6234`
- Puerto Rico: `+1 (787) 234-4442`

Although all three numbers begin with `+1`, they belong to different countries.
Storing the selected country separately removes that ambiguity
and makes it easier to perform country-specific validation and processing.

For example:

```ts
const { phone, country, phoneNo } = value;
```

Use:

- `phone` when you need the complete international number.
- `phoneNo` when you only need the national number.
- `country` for country-specific logic or validation.

**This is the main reason the field value shape changed from a `string` to an `object`
in `v4`.**

### Search Countries

Because the country list is large, `v4` introduces an inline search field
that allows users to search for and select their preferred country. The search matches the
country name, ISO2 country code, and dial code.

The search field is enabled by default and can be customized using `searchCountryProps`, an object
with the following properties:

- `allowCountrySearch` - Shows or hides the inline search field. Defaults to `true`.
- `textFieldProps` - [TextFieldProps](https://v7.mui.com/material-ui/api/text-field/) for customizing the search text field.
- `renderCountryMenuItem` - Customizes the content of each `MenuItem` in the country search dropdown.
- `noCountryFoundText` - Text shown when no countries match the search. Defaults to "**No countries found**".

```tsx
<RHFPhoneInput
  fieldName="phoneNumber"
  control={control}
  searchCountryProps={{
    textFieldProps: {
      variant: 'outlined'
    },
    renderCountryMenuItem: country => `${country.dialCode} - ${country.name}`,
    noCountryFoundText: 'No matching country found'
  }}
/>
```

The search field is rendered inside the country dropdown and remains pinned to the top while the
country list is scrolled.

## Examples
- [RHFPhoneInput](https://rhf-mui-components-examples.vercel.app/miscellaneous-components)
- [PhoneInput](https://react-international-phone-storybook.vercel.app/?path=/story/phoneinput--default)

## API
`RHFPhoneInput` extends the props of [TextField](https://v7.mui.com/material-ui/api/text-field/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable rows={componentProps.RHFPhoneInput} docsVersion={4} muiVersion={7} v4AndAbove />
